--- a/Assignment13/style.css
+++ b/Assignment13/style.css
@@ -1,84 +1,70 @@
-
 *{
-    font-family: 'Trebuchet MS',  sans-serif, 'Gill Sans MT','Gill Sans', Calibri, 'Trebuchet MS',;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
-  
-  #container{
-      display: flex;
-       align-items: center;
-       justify-content: space-between;
-       width: 80vw;
-       margin-top: 45vh;
-  }
-  
-  .btn1{
-      padding: 1.5vh 4vw;
-      border: 0.5px solid white;
-      border-radius: 15px;
-      font-size: 1.4vw;
-      letter-spacing: 3px;
-      font-weight: 580;
-      background: linear-gradient(to left,rgb(99, 223, 105),rgb(223, 89, 129));
-      box-shadow: 22px 21px 58px rgb(211, 162, 205);
-  }
-  
-  .btn2{
-      padding: 1.4vh 5vw;
-      background-color: blueviolet;
-      color: white;
-      font-size:1.5vw ;
-      border-radius:20px 2px 20px 2px;
-      font-weight: 700;
-      border: 0.1px solid rgb(255, 254, 254);
-  }
-  
-  .btn3{
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      background-color: transparent;
-      border: 2px solid black;
-  }
-  
-  .btn3 img{
-      height: 100%;
-      width: 100%;
-  }
-  
-  .btn4{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 1.2vw;
-      padding: 0.7vh 3vw;
-      color: white;
-      border-radius: 17px;
-      border: 0.1px solid white;
-      box-shadow: 20px 20px 60px rgb(107, 243, 130);
-      background-color: rgb(6, 201, 9);
-  }
-  
-  .btn4 div{
-      height: 6px;
-      width: 6px;
-      border-radius: 50%;
-      background-color: white;
-  }
-  
-  .btn5{
-      padding: 1.5vh 4vw;
-      border: 0.5px solid black;
-      background-color: white;
-      border-radius: 7px;
-      display: flex;
-      align-items: center;
-      gap: 1vw;
-  
-  }
-  
-  .btn5 img{
-      height: 20px;
-      width: 20px;
-  }
-  
+#container{
+    display: flex;
+     align-items: center;
+     justify-content: space-between;
+     width: 80vw;
+     margin-top: 45vh;
+
+
+.btn1{
+    background-color: #6fe951;
+    border:none;
+    color:white;
+    padding:10px 20px;
+    text-align:center;
+    display:inline-block;
+    font-size:16px;
+    margin:4px 2px;
+    cursor:pointer;
+}
+
+.btn2{
+    background-color:pink;
+    border:none;
+    color:white;
+    padding: 10px 20px;
+    text-align:center;
+    display:inline-block;
+    font-size:16px;
+    margin: 4px 2px;
+    cursor:pointer;
+    border-radius: 50px;
+
+
+}
+
+.btn3{
+    background-color:transparent;
+    border:2px solid #6fe951;
+    padding:10px 20px;
+    text-align: center;
+    display:inline-block;
+    font-size: 16px;
+    margin:4px 2px;
+    cursor:pointer;
+}
+
+.btn4{
+    background:linear-gradient(to right,skyblue,pink);
+    border: none;
+    color:white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display:block;
+    font-size: 16px;
+    margin:4px 2px;
+    cursor:pointer;
+    border-radius: 80px;
+}
+
+.btn5{
+    background-attachment:#e0e0e0;
+    border:none;
+    color:white
+}
+}
