--- a/Assignment012/style.css
+++ b/Assignment012/style.css
@@ -1,8 +1,15 @@
-.yellow-btn{
-    background-color: rgba(201, 224, 24, 0.55);
-    height: 30px;
-    width: 150px;
-    border: 0.1px solid black;
-    font-size: 2vw;
-    border-radius: 7px;
+#container{
+    display: flex;
+     align-items: center;
+     justify-content: space-between;
+     width: 80vw;
+     margin-top: 45vh;
+} 
+.green-btn{
+    background-color: rgba(60, 245, 14, 0.945);
+    height: 35px;
+    width: 130px;
+    border: 0.3px solid black;
+    font-size: 2.5vw;
+    border-radius: 25px;
 }
