--- a/Assignment12/style.css
+++ b/Assignment12/style.css
@@ -1,16 +1,15 @@
-.text {
-    color: black;
-    background-color: yellow;
-}
-
-.bg-blue {
-    background-color: blue;
-}
-
-.bg-red{
-    background-color: red;
-}
-
-.bg-skyblue{
-    background-color: skyblue;
+#container{
+    display: flex;
+     align-items: center;
+     justify-content: space-between;
+     width: 80vw;
+     margin-top: 45vh;
+} 
+.green-btn{
+    background-color: rgba(60, 245, 14, 0.945);
+    height: 35px;
+    width: 130px;
+    border: 0.3px solid black;
+    font-size: 2.5vw;
+    border-radius: 25px;
 }
