--- a/Assignment14/style.css
+++ b/Assignment14/style.css
@@ -1,127 +1,28 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-body
-{
-    width: 100vw;
-    height: 100vh;
-
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    background-image: linear-gradient(120deg,#a1c4fd 0%, #c2e9fb 100%);
-    background-position: center;
-    background-size: cover;
-
-}
-
-.container{
-     
-    width: 400px;
-    height: 500px;
-     background-color:rgba(0,0,0,0.5);
-     backdrop-filter: blur(10px);
-     border-radius: 40px;
-     border:3px solid rgba(37,72,142);
-     box-shadow: 0 0 30px rgba(0,0,0,0.5);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-h2{
-    color: white;
-    text-transform: uppercase;
-    padding:20px 0;
-    font-size: 2em;
-}
-
-.form-group{
-    position: relative;
-    width:330px;
-    margin:30px 0;
-    border-bottom: 3px solid #fff;
-}
-
-.form-group input{
-
-    width:100px;
-    height: 50px;
-    background:transparent;
-    border:none;
-    outline: none;
-
-    font-size: 1.2em;
-    color:#fff;
-    padding:0 30px 0 10px;
-}
-
-.form-group label
-{
-    position :absolute;
-    top: 50%;
-    left:10px;
-    transform: translateY(-50%);
-    font-size: 1.2em;
-    color: #ffff;
-    transition:0.5s;
-}
- input:focus ~ label,
- input:valid ~ label
- {
-    top: -5px;
- }
-
-.form-group i{
-
-    position:absolut;
-    top:50%;
-    right: 20px;
-    transform: translateY(-50%);
-    color:#fff;
-    font-size: 1.2em;
-}
-
-p{
-    text-align: center;
-    color:#fff;
-    padding: 10px 0;
-
-}
-
-p>a{
-    color:#fff;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-p>a:hover
-{
-    text-decoration: underline;
-    font-style: italic;
-}
-
-#btn
-{
-    width:100px;
-    height: 50px;
-    border-radius: 40px;
-    border:none;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    font-weight: 600;
-    margin: 10px 0;
-    cursor: pointer;
-    transition: 0.5s;
-
-#btn:hover{
-
-}    
-
-}
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .container {
+    width: 80%;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .container:hover {
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  h1 {
+    color: #333;
+  }
+  
+  p {
+    color: #666;
+  }
+  
